Changed namespace and access level for infrastructure classes

--- a/NServiceBus.Solr/NServiceBus.Solr.csproj
+++ b/NServiceBus.Solr/NServiceBus.Solr.csproj
@@ -67,6 +67,9 @@
     <None Include="packages.config" />
     <None Include="SolrNet.chm" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
