--- a/NServiceBus.Solr/NServiceBus.Solr.csproj
+++ b/NServiceBus.Solr/NServiceBus.Solr.csproj
@@ -54,22 +54,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="ConfigureSchedule.cs" />
+    <Compile Include="Infrastructure\ConfigureSchedule.cs" />
+    <Compile Include="Infrastructure\SolrDeltaImportCommand.cs" />
     <Compile Include="TimeSpanDsl.cs" />
-    <Compile Include="TriggerDeltaImport.cs" />
+    <Compile Include="Infrastructure\TriggerDeltaImport.cs" />
     <Compile Include="TriggerDeltaImportFluent.cs" />
     <Compile Include="SolrDataImportTrigger.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SolrDeltaImportCommand.cs" />
-    <Compile Include="TriggerDeltaImportHandler.cs" />
+    <Compile Include="Infrastructure\TriggerDeltaImportHandler.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="SolrNet.chm" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Infrastructure\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
