--- a/NServiceBus.Solr/NServiceBus.Solr.csproj
+++ b/NServiceBus.Solr/NServiceBus.Solr.csproj
@@ -42,6 +42,9 @@
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.4.6.3\lib\net40\NServiceBus.Core.dll</HintPath>
     </Reference>
+    <Reference Include="ServiceControl.Plugin.CustomChecks">
+      <HintPath>..\packages\ServiceControl.Plugin.CustomChecks.1.0.0\lib\net40\ServiceControl.Plugin.CustomChecks.dll</HintPath>
+    </Reference>
     <Reference Include="SolrNet">
       <HintPath>..\packages\SolrNet.0.3.1\lib\SolrNet.dll</HintPath>
     </Reference>
@@ -56,10 +59,12 @@
   <ItemGroup>
     <Compile Include="Infrastructure\ConfigureSchedule.cs" />
     <Compile Include="Infrastructure\SolrDeltaImportCommand.cs" />
+    <Compile Include="Infrastructure\SolrPingPeriodicCheck.cs" />
+    <Compile Include="PingFluent.cs" />
     <Compile Include="TimeSpanDsl.cs" />
     <Compile Include="Infrastructure\TriggerDeltaImport.cs" />
     <Compile Include="TriggerDeltaImportFluent.cs" />
-    <Compile Include="SolrDataImportTrigger.cs" />
+    <Compile Include="ConfigureSolrIntegration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Infrastructure\TriggerDeltaImportHandler.cs" />
   </ItemGroup>
