--- a/NServiceBus.Solr/packages.config
+++ b/NServiceBus.Solr/packages.config
@@ -3,5 +3,6 @@
   <package id="CommonServiceLocator" version="1.0" targetFramework="net451" />
   <package id="NServiceBus" version="4.6.3" targetFramework="net451" />
   <package id="NServiceBus.Interfaces" version="4.6.3" targetFramework="net451" />
+  <package id="ServiceControl.Plugin.CustomChecks" version="1.0.0" targetFramework="net451" />
   <package id="SolrNet" version="0.3.1" targetFramework="net451" />
 </packages>
